Fixed footer misalignment

--- a/src/ExtensionGallery/app/less/site.less
+++ b/src/ExtensionGallery/app/less/site.less
@@ -1,4 +1,4 @@
-﻿@footer-height: 150px;
+﻿@footer-height: 155px;
 @min-width: 620px;
 
 html, body {
@@ -163,9 +163,9 @@ footer {
 
 	.copyright {
 		text-align: right;
-		margin-top: @footer-height - 30px;
 		font-size: .9em;
 		color: #808080;
+		clear: both;
 	}
 }
 
